Tests For RequestFactory

--- a/Source/BSTU/RequestsScheduler/Interactor/Interactor.csproj
+++ b/Source/BSTU/RequestsScheduler/Interactor/Interactor.csproj
@@ -8,4 +8,10 @@
     <RootNamespace>BSTU.RequestsScheduler.Interactor</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Tests\**" />
+    <EmbeddedResource Remove="Tests\**" />
+    <None Remove="Tests\**" />
+  </ItemGroup>
+
 </Project>
