--- a/Source/BSTU/RequestsScheduler/Interactor/Tests/Interactor.Tests.csproj
+++ b/Source/BSTU/RequestsScheduler/Interactor/Tests/Interactor.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -25,7 +25,6 @@
 
   <ItemGroup>
     <Folder Include="Interactors\" />
-    <Folder Include="Providers\" />
     <Folder Include="Presentators\" />
   </ItemGroup>
 
