--- a/Source/BSTU/RequestsScheduler/Configuration/Tests/Configuration.Tests.csproj
+++ b/Source/BSTU/RequestsScheduler/Configuration/Tests/Configuration.Tests.csproj
@@ -26,4 +26,10 @@
     <ProjectReference Include="..\Configuration.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Configuration\" />
+    <Folder Include="Validators\" />
+    <Folder Include="Utils\" />
+  </ItemGroup>
+
 </Project>
