--- a/Source/BSTU/RequestsScheduler/Configuration/Configuration.csproj
+++ b/Source/BSTU/RequestsScheduler/Configuration/Configuration.csproj
@@ -9,6 +9,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Tests\**" />
+    <EmbeddedResource Remove="Tests\**" />
+    <None Remove="Tests\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Interactor\Interactor.csproj" />
   </ItemGroup>
 
