--- a/Source/BSTU/RequestsScheduler/Configuration/Configuration.csproj
+++ b/Source/BSTU/RequestsScheduler/Configuration/Configuration.csproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Interactor\Interactor.csproj" />
   </ItemGroup>
 
