--- a/RequestsScheduler/Source/BSTU/RequestsScheduler/Interactor/Interactor.csproj
+++ b/RequestsScheduler/Source/BSTU/RequestsScheduler/Interactor/Interactor.csproj
@@ -14,4 +14,8 @@
     <None Remove="Tests\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
+  </ItemGroup>
+
 </Project>
