--- a/RequestsScheduler/Source/BSTU/RequestsScheduler/Worker/appsettings.json
+++ b/RequestsScheduler/Source/BSTU/RequestsScheduler/Worker/appsettings.json
@@ -2,6 +2,10 @@
   "ConfigurationResource": {
     "ConfigurationFilePath": "Configuration\\Schedule.json"
   },
+  "RequestsServerConfiguration": {
+    "BaseUrl": "https://localhost:44355/",
+    "RequestsEndpoint": "api/requests"
+  },
   "Serilog": {
     "Using": [ "Serilog.Sinks.File", "Serilog.Sinks.Console" ],
     "MinimumLevel": "Debug",
@@ -19,5 +23,5 @@
   },
   "StatisticsLogger": {
     "Path": "D:\\Study\\TransportRequestsScheduler\\RequestsScheduler\\Source\\Worker\\bin\\Debug\\net6.0\\statistics.txt"
-  },
+  }
 }
