--- a/RequestsProcessor/Source/BSTU/RequestsProcessor/Processor/appsettings.json
+++ b/RequestsProcessor/Source/BSTU/RequestsProcessor/Processor/appsettings.json
@@ -1,5 +1,4 @@
 {
-  "AllowedHosts": "*",
   "Serilog": {
     "Using": [ "Serilog.Sinks.File", "Serilog.Sinks.Console" ],
     "MinimumLevel": "Debug",
@@ -7,12 +6,12 @@
       { "Name": "Console" },
       {
         "Name": "File",
-        "Args": { "path": "D:\\Study\\TransportRequestsScheduler\\RequestsServer\\Source\\BSTU\\RequestsServer\\Api\\bin\\Debug\\net6.0\\application.txt" }
+        "Args": { "path": "D:\\Study\\TransportRequestsScheduler\\RequestsScheduler\\Source\\Worker\\bin\\Debug\\net6.0\\application.txt" }
       }
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
     "Properties": {
-      "Application": "Requests Server"
+      "Application": "Requests Processor"
     }
   },
   "RabbitMQConfiguration": {
@@ -22,5 +21,8 @@
     "UserName": "snow",
     "Password": "snowpass",
     "Port": 5672
+  },
+  "ConnectionStrings": {
+    "RequestsProcessor": "User ID=postgres; Password=whysorude; Host=localhost; Port=5432; Database=RequestsScheduler;"
   }
 }
