--- a/RequestsProcessor/Source/BSTU/RequestsProcessor/Domain/Domain.csproj
+++ b/RequestsProcessor/Source/BSTU/RequestsProcessor/Domain/Domain.csproj
@@ -5,12 +5,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AssemblyName>Domain</AssemblyName>
-    <RootNamespace>BSTU.RequestsServer.Domain</RootNamespace>
+    <RootNamespace>BSTU.RequestsProcessor.Domain</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Options" Version="2.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.7" />
     <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
   </ItemGroup>
 
