--- a/RequestsProcessor/Source/BSTU/RequestsProcessor/Processor/appsettings.json
+++ b/RequestsProcessor/Source/BSTU/RequestsProcessor/Processor/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "FaultedRequestsFilePath": "D:\\Faulted.txt",
   "Serilog": {
     "Using": [ "Serilog.Sinks.File", "Serilog.Sinks.Console" ],
     "MinimumLevel": "Debug",
@@ -15,14 +16,14 @@
     }
   },
   "RabbitMQConfiguration": {
-    "QueueName": "RequestsQueue",
+    "QueueName": "Requests",
     "HostName": "localhost",
     "VirtualHost": "RequestsScheduler",
-    "UserName": "snow",
-    "Password": "snowpass",
+    "UserName": "guest",
+    "Password": "guest",
     "Port": 5672
   },
   "ConnectionStrings": {
-    "RequestsProcessor": "User ID=postgres; Password=whysorude; Host=localhost; Port=5432; Database=RequestsScheduler;"
+    "RequestsProcessor": "User ID=postgres; Password=postgres; Host=localhost; Port=5432; Database=RequestsScheduler;"
   }
 }
