--- a/RequestsScheduler/Source/BSTU/RequestsScheduler/Worker/Worker.csproj
+++ b/RequestsScheduler/Source/BSTU/RequestsScheduler/Worker/Worker.csproj
@@ -28,4 +28,6 @@
   <Target Name="AfterBuild">
     <Copy DestinationFolder="$(ProjectDir)\bin\$(Configuration)\net6.0" SourceFiles="Configuration\Schedule.json" SkipUnchangedFiles="false" />
   </Target>
+  
+  <ProjectExtensions><VisualStudio><UserProperties configuration_4schedule_1json__JsonSchema="https://datahubproject.io/schemas/datahub_ingestion_schema.json" /></VisualStudio></ProjectExtensions>
 </Project>
