--- a/RequestsServer/Source/BSTU/RequestsServer/Api/appsettings.json
+++ b/RequestsServer/Source/BSTU/RequestsServer/Api/appsettings.json
@@ -16,11 +16,11 @@
     }
   },
   "RabbitMQConfiguration": {
-    "QueueName": "RequestsQueue",
+    "QueueName": "Requests",
     "HostName": "localhost",
     "VirtualHost": "RequestsScheduler",
-    "UserName": "snow",
-    "Password": "snowpass",
+    "UserName": "guest",
+    "Password": "guest",
     "Port": 5672
   }
 }
