--- a/RequestsScheduler/Source/BSTU/RequestsScheduler/Worker/appsettings.json
+++ b/RequestsScheduler/Source/BSTU/RequestsScheduler/Worker/appsettings.json
@@ -1,7 +1,6 @@
 {
-  "ConfigurationResource": {
-    "ConfigurationFilePath": "Configuration\\Schedule.json"
-  },
+  "ConfigurationFilePath": "Configuration\\Schedule.json",
+  "ReasonsForTravelConfigPath": "Configuration\\ReasonsForTravel.json",
   "RequestsServerConfiguration": {
     "BaseUrl": "https://localhost:44355/",
     "RequestsEndpoint": "api/requests"
