--- a/RequestsServer/Source/BSTU/RequestsServer/Api/appsettings.json
+++ b/RequestsServer/Source/BSTU/RequestsServer/Api/appsettings.json
@@ -22,5 +22,7 @@
     "UserName": "guest",
     "Password": "guest",
     "Port": 5672
-  }
+  },
+  "ReasonsForTravelConfigPath": "D:\\Study\\TransportRequestsScheduler\\RequestsScheduler\\Source\\BSTU\\RequestsScheduler\\Worker\\Configuration\\ReasonsForTravel.json",
+  "RequestsConfigPath": "D:\\Study\\TransportRequestsScheduler\\RequestsScheduler\\Source\\BSTU\\RequestsScheduler\\Worker\\Configuration\\Schedule.json"
 }
