--- a/RequestsScheduler/Source/BSTU/RequestsScheduler/Configuration/Configuration.csproj
+++ b/RequestsScheduler/Source/BSTU/RequestsScheduler/Configuration/Configuration.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
   </ItemGroup>
