--- a/RequestsScheduler/Source/BSTU/RequestsScheduler/Worker/Worker.csproj
+++ b/RequestsScheduler/Source/BSTU/RequestsScheduler/Worker/Worker.csproj
@@ -11,6 +11,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <_ContentIncludedByDefault Remove="Configuration\ReasonsForTravel.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.1" />
