--- a/RequestsScheduler/Source/BSTU/RequestsScheduler/Worker/appsettings.json
+++ b/RequestsScheduler/Source/BSTU/RequestsScheduler/Worker/appsettings.json
@@ -2,7 +2,7 @@
   "ConfigurationFilePath": "Configuration\\Schedule.json",
   "ReasonsForTravelConfigPath": "Configuration\\ReasonsForTravel.json",
   "RequestsServerConfiguration": {
-    "BaseUrl": "https://localhost:44355/",
+    "BaseUrl": "https://localhost:7166/",
     "RequestsEndpoint": "api/requests"
   },
   "Serilog": {
@@ -12,15 +12,12 @@
       { "Name": "Console" },
       {
         "Name": "File",
-        "Args": { "path": "D:\\Study\\TransportRequestsScheduler\\RequestsScheduler\\Source\\Worker\\bin\\Debug\\net6.0\\application.txt" }
+        "Args": { "path": "application.txt" }
       }
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
     "Properties": {
       "Application": "Requests Scheduler"
     }
-  },
-  "StatisticsLogger": {
-    "Path": "D:\\Study\\TransportRequestsScheduler\\RequestsScheduler\\Source\\Worker\\bin\\Debug\\net6.0\\statistics.txt"
   }
 }
