--- a/RequestsServer/Source/BSTU/RequestsServer/Api/appsettings.json
+++ b/RequestsServer/Source/BSTU/RequestsServer/Api/appsettings.json
@@ -7,7 +7,7 @@
       { "Name": "Console" },
       {
         "Name": "File",
-        "Args": { "path": "D:\\Study\\TransportRequestsScheduler\\RequestsServer\\Source\\BSTU\\RequestsServer\\Api\\bin\\Debug\\net6.0\\application.txt" }
+        "Args": { "path": "application.txt" }
       }
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
