--- a/UI/Web/src/assets/configuration/app.config.json
+++ b/UI/Web/src/assets/configuration/app.config.json
@@ -1,4 +1,4 @@
 {
-    "requestsServerUrl": "https://localhost:44355/",
+    "requestsServerUrl": "{RequestsServer URL}",
     "requestsEndpoint": "api/requests"
 }
